--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="mainContainer">
         <div class="candidatesContainer">
             <div class="lolaPic">
-                <img id="lola" src="file:///C:/Users/Gabriel%20Velasco/Documents/devWeb/Eleicoes-2022-main/imgs/lolaSite.png" alt="" width="250px" height="250px">
+                <img id="lola" src="/imgs/lolaSite.png" alt="" width="250px" height="250px">
             </div>
             <div class="votesPercent">
                 <h2 id="lolaTxt" >51</h2>
@@ -66,7 +66,7 @@
         <div id="vs"><h1>VS</h1></div>
         <div class="candidatesContainer">
             <div class="bolsaPic">
-                <img id="bolsa" src="file:///C:/Users/Gabriel%20Velasco/Documents/devWeb/Eleicoes-2022-main/imgs/bolsas465x480.png" alt="" width="250px" height="250px">
+                <img id="bolsa" src="/imgs/bolsas465x480.png" alt="" width="250px" height="250px">
             </div>
             <div class="votesPercent">
                 <h2 id="bolsaTxt">49</h2>
