--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <style>
-        h1 {
+        h1, h2 {
             text-align: center;
             color: black;
             font-family: 'Courier New', Courier, monospace;
@@ -29,10 +29,6 @@
             /* justify-content: space-between; */
         }
 
-        h2 {
-            text-align: center;
-        }
-
         .votesPercent {
             border: 1px solid rgb(129, 129, 129)!important;
             border-radius: 10px;
@@ -44,10 +40,29 @@
             box-shadow: 5px 10px 48px #888888;
         }
 
-        #vs {
+        #middle {
             display: flex;
             justify-content: center;
             align-items: center;
+            font-size: 9px;
+        }
+
+        @media (max-width: 920px){
+            .mainContainer {
+                flex-direction: column;
+                align-items: center;
+                row-gap: 40px;
+            }
+
+            .votesPercent h2 {
+                font-size: 20px;
+            }
+
+            img {
+                width: 200px;
+                height: 200px;
+            }
+
         }
 
     </style>
@@ -63,7 +78,9 @@
                 <h2 id="lolaTxt" >51</h2>
             </div>
         </div>
-        <div id="vs"><h1>VS</h1></div>
+
+        <div id="middle"><h1 id="middleTxt">Urnas Apuradas: 00 %</h1></div>
+
         <div class="candidatesContainer">
             <div class="bolsaPic">
                 <img id="bolsa" src="imgs/bolsas465x480.png" alt="" width="250px" height="250px">
